--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,900;1,400;1,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="style.css">
-    <!-- add FontAwesome here -->
+    <script src="https://kit.fontawesome.com/fce84d3a38.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -37,6 +37,43 @@
             </div>
             
             <!-- form goes here. -->
+
+            <form>
+                <fieldset>
+                    <legend>Delivery Information</legend>
+                    <p class="hint">* - required field</p>
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="user-name">
+                    <label for="email" class="error-text">Email Address *<i class="fas fa-exclamation-triangle"></i></label>
+                    <p class="error-text-hint"></p>
+                    <input type="email" id="email" name="user-email"
+                    class="error-input">
+                    <p class="hint error-text">Email address must contain a single @.</p>
+                    <label for="address1>">Street Address *</label>
+                    <input type="text" id="address1" name="user-address1">
+                    <label for="address2">Apartment/Office Number</label>
+                    <input type="text" id="address2" name="user-address2">
+                    <label for="zip" class="error-text">Zip Code *<i class="fas fa-exclamation-triangle"></i></label>
+                    <input type="text" id="zip" name="user-zip"
+                    class="error-input">
+                    <p class="hint error-text">Please enter a Zip Code.
+                    </p>
+                    <label for="phone">Phone</label>
+                    <input type="tel" id="phone" name="user-phone">
+                    <p class="hint">No phone? Include alternate contact below.</p>
+                    <label for="delivery-instructions">Delivery Instructions</label>
+                    <textarea id="delivery-instructions"
+                    name="user-delivery-instructions"></textarea>
+                    <button type="submit">Continue to Billing</button>
+
+
+
+
+
+
+                </fieldset>
+
+            </form>>
             
         </div>
     </main>
